# ratemyprofessor-etl-pipeline

./: .gitignore  README.md  api-usage.md  pyproject.toml
api/: README.md
api/Automatic-Schedule-Planner/src/app/schedule/: page.tsx
extract/: index.ts  package-lock.json  package.json  rmp-extended.ts  tsconfig.json
load/: __init__.py  to_sqlite.py
transform/: __init__.py
